# inferflow

./: CMakeLists.txt  LICENSE  README.md  main.md
data/models/aquila_chat2_34b/: download.sh  download.win.cmd  model_spec.json
data/models/baichuan2_13b_chat/: download.sh  download.win.cmd  model_spec.json
data/models/baichuan2_7b_chat/: download.sh  download.win.cmd  model_spec.json
data/models/bert_base_multilingual_cased/: download.sh  download.win.cmd  model_spec.json
data/models/bloomz_3b/: download.sh  download.win.cmd  model_spec.pickle.json  model_spec.safetensors.json
data/models/chatglm2_6b/: download.sh  download.win.cmd  model_spec.json
data/models/deepseek_moe_16b_base/: download.sh  download.win.cmd  model_spec.json
data/models/facebook_m2m100_418m/: download.sh  download.win.cmd  model_spec.json
data/models/falcon_40b_instruct/: download.sh  download.win.cmd  model_spec.json
data/models/falcon_7b_instruct/: download.sh  download.win.cmd  model_spec.json
data/models/fusellm_7b/: download.sh  download.win.cmd  model_spec.json
data/models/gemma_2b_it/: download.sh  model_spec.json
data/models/internlm_chat_20b/: download.sh  download.win.cmd  model_spec.json
data/models/llama2.c/: download.sh  download.win.cmd  model_spec_110m.json  model_spec_15m.json
data/models/llama2_13b_chat_hf/: download.sh  model_spec.json
data/models/llama2_7b_chat.gguf/: download.sh  download.win.cmd  model_spec.json
data/models/llama2_7b_chat_hf/: download.sh  model_spec.json
data/models/llama2_7b_hf/: download.sh  model_spec.json
data/models/minicpm_2b_dpo_bf16/: download.sh  download.win.cmd  model_spec.json
data/models/mistral_7b_instruct_v0.2/: download_pickle.sh  download_pickle.win.cmd  download_safetensors.sh  download_safetensors.win.cmd  model_spec.json  model_spec.safetensors.json
data/models/mixtral_8x7b_instruct_v0.1/: download_safetensors.sh  download_safetensors.win.cmd  model_spec.safetensors.json
data/models/open_llama_3b/: download.sh  download.win.cmd  model_spec.json
data/models/opt_13b/: download.sh  download.win.cmd  model_spec.json
data/models/opt_350m/: download.sh  download.win.cmd  model_spec.json
data/models/opt_iml_max_30b/: download.sh  download.win.cmd  model_spec.json
data/models/orion_14b_chat/: download.sh  download.win.cmd  model_spec.json
data/models/phi_2/: download.sh  download.win.cmd  model_spec.safetensors.json
data/models/qwen1.5_0.5b_chat/: download.sh  download.win.cmd  model_spec.json
data/models/qwen1.5_7b_chat/: download.sh  download.win.cmd  model_spec.json
data/models/xverse_13b_chat/: download.sh  download.win.cmd  model_spec.json
data/models/yi_34b_chat/: download.sh  download.win.cmd  model_spec.json
data/models/yi_6b_200k/: download.sh  download.win.cmd  model_spec.json
docs/: 34b40b_models_on_24gb_vram.md  getting_started.win.md  model_serving_config.md  model_setup.md
src/: CMakeLists.txt  namespace.inc
src/common/: cuda_util.cu  cuda_util.h  data_types.h  pickle_reader.cc  pickle_reader.h  quant_cuda.cu  quant_cuda.h  quant_types.h  quantization.cc  quantization.h  std_vocabulary.cc  std_vocabulary.h  text_tokenizer.cc  text_tokenizer.h
src/kernels/: binary_tensor_opr.h  gemm.h  gemm_wmma.h  gemv.h  kernels_common.h  lock.h  misc_tensor_opr.h  tensor_quant.h  unary_tensor_opr.h  vector_opr.h
src/service/: CMakeLists.txt  inferflow_service.cc  inferflow_service.h  inferflow_service_main.cc
src/tensor/: cublas_engine.cu  cublas_engine.h  device_memory_heap.cu  device_memory_heap.h  device_tensor.cu  device_tensor.h  device_tensor_builder.cu  device_tensor_builder.h  device_tensor_util.cu  device_tensor_util.h  host_float_buffer.cc  host_float_buffer.h  host_tensor.cc  host_tensor.h  host_tensor_opr.cc  host_tensor_opr.h  parallel_gemm.cu  parallel_gemm.h  sgemm_cutlass.h  tensor_common.cc  tensor_common.h  tensor_helper.h  tensor_mul.cu  tensor_mul.h  tensor_opr.cu  tensor_opr.h  tensor_util.cc  tensor_util.h
src/tools/: CMakeLists.txt  convert_tokenizer_data.cc  inferflow_client.cc  llm_inference.cc  perplexity.cc
src/transformer/: cpu_inference_worker.cc  cpu_inference_worker.h  cpu_kv_cache.cc  cpu_kv_cache.h  decoding_strategies.cc  decoding_strategies.h  gpu_inf_global_data.cu  gpu_inf_global_data.h  inference_engine.cc  inference_engine.h  inference_types.h  inference_worker.cc  inference_worker.h  kv_cache.cc  kv_cache.h  model.cc  model.h  model_reader.cc  model_reader.h  model_writer.cc  model_writer.h  network_builder.cc  network_builder.h  network_structure.cc  network_structure.h  query_state_table.cc  query_state_table.h  sampling_strategy.cc  sampling_strategy.h  service_data.cc  service_data.h  transformer_types.h
